# flutter_engine

./: BUILD.gn  DEPS  OAT.xml  README.OpenSource  README.en.md  README.md  update_engine.sh
common/: config.gni
shell/platform/ohos/: BUILD.gn  library_loader.cpp  napi_common.h  ohos_asset_provider.cpp  ohos_asset_provider.h  ohos_context_gl_impeller.cpp  ohos_context_gl_impeller.h  ohos_context_gl_skia.cpp  ohos_context_gl_skia.h  ohos_display.cpp  ohos_display.h  ohos_egl_surface.cpp  ohos_egl_surface.h  ohos_environment_gl.cpp  ohos_environment_gl.h  ohos_external_texture_gl.cpp  ohos_external_texture_gl.h  ohos_image_generator.cpp  ohos_image_generator.h  ohos_logger.c  ohos_logger.h  ohos_main.cpp  ohos_main.h  ohos_shell_holder.cpp  ohos_shell_holder.h  ohos_surface_gl_impeller.cpp  ohos_surface_gl_impeller.h  ohos_surface_gl_skia.cpp  ohos_surface_gl_skia.h  ohos_surface_software.cpp  ohos_surface_software.h  ohos_surface_vulkan_impeller.cpp  ohos_surface_vulkan_impeller.h  ohos_touch_processor.cpp  ohos_touch_processor.h  ohos_xcomponent_adapter.cpp  ohos_xcomponent_adapter.h  platform_message_handler_ohos.cpp  platform_message_handler_ohos.h  platform_message_response_ohos.cpp  (+6 more)
shell/platform/ohos/config/: BUILD.gn
shell/platform/ohos/context/: ohos_context.cpp  ohos_context.h
shell/platform/ohos/flutter_embedding/: .gitignore  build-profile.json5  local.properties  oh-package-lock.json5  oh-package.json5
shell/platform/ohos/flutter_embedding/AppScope/: app.json5
shell/platform/ohos/flutter_embedding/AppScope/resources/base/element/: string.json
shell/platform/ohos/flutter_embedding/dependencies/: hvigor-dependencies-config.md
shell/platform/ohos/flutter_embedding/flutter/: build-profile.json5  hvigorfile.ts  index.ets  oh-package.json5
shell/platform/ohos/flutter_embedding/flutter/src/main/: module.json5
shell/platform/ohos/flutter_embedding/flutter/src/main/cpp/types/libflutter/: index.d.ets  index.d.ts  index_actual.d.ets  index_actual.d.ts  oh-package.json5
shell/platform/ohos/flutter_embedding/flutter/src/main/ets/: FlutterInjector.ets
shell/platform/ohos/flutter_embedding/flutter/src/main/ets/app/: FlutterPluginRegistry.ets
shell/platform/ohos/flutter_embedding/flutter/src/main/ets/component/: FlutterComponent.ets  XComponentStruct.ets
shell/platform/ohos/flutter_embedding/flutter/src/main/ets/embedding/engine/: FlutterEngine.ets  FlutterEngine.ts  FlutterEngineCache.ets  FlutterEngineCache.ts  FlutterEngineConnectionRegistry.ets  FlutterEngineConnectionRegistry.ts  FlutterEngineGroup.ets  FlutterEngineGroup.ts  FlutterEngineGroupCache.ets  FlutterNapi.ets  FlutterNapi.ts  FlutterOverlaySurface.ets  FlutterShellArgs.ets  FlutterShellArgs.ts
shell/platform/ohos/flutter_embedding/flutter/src/main/ets/embedding/engine/dart/: DartExecutor.ets  DartExecutor.ts  DartMessenger.ets  DartMessenger.ts  PlatformMessageHandler.ets
shell/platform/ohos/flutter_embedding/flutter/src/main/ets/embedding/engine/loader/: ApplicationInfoLoader.ets  ApplicationInfoLoader.ts  FlutterApplicationInfo.ets  FlutterLoader.ets  FlutterLoader.ts
shell/platform/ohos/flutter_embedding/flutter/src/main/ets/embedding/ohos/: ExclusiveAppComponent.ts  FlutterAbility.ets  FlutterAbility.ts  FlutterAbilityAndEntryDelegate.ets  FlutterAbilityDelegate.ets  FlutterAbilityDelegate.ts  FlutterAbilityLaunchConfigs.ets  FlutterAbilityLaunchConfigs.ts  FlutterComopnentDelegate.ets  FlutterEngineConfigurator.ets  FlutterEngineProvider.ets  FlutterEntry.ets  FlutterManager.ets  FlutterPage.ets  KeyboardManager.ets  OhosTouchProcessor.ets  Settings.ets  TouchEventTracker.ets  WindowInfoRepositoryCallbackAdapterWrapper.ets
shell/platform/ohos/flutter_embedding/flutter/src/main/ets/plugin/: PlatformPlugin.ets  PlatformPlugin.ts
shell/platform/ohos/flutter_embedding/flutter/src/main/ets/plugin/common/: BasicMessageChannel.ets  BasicMessageChannel.ts  BinaryCodec.ets  BinaryCodec.ts  BinaryMessenger.ets  BinaryMessenger.ts  EventChannel.ets  FlutterException.ets  JSONMessageCodec.ets  JSONMessageCodec.ts  JSONMethodCodec.ets  JSONMethodCodec.ts  MessageCodec.ets  MethodCall.ets  MethodCall.ts  MethodChannel.ets  MethodChannel.ts  MethodCodec.ets  MethodCodec.ts  PluginRegistry.ts  StandardMessageCodec.ets  StandardMessageCodec.ts  StandardMethodCodec.ets  StringCodec.ets  StringCodec.ts
shell/platform/ohos/flutter_embedding/flutter/src/main/ets/plugin/editing/: ListenableEditingState.ets  ListenableEditingState.ts  TextEditingDelta.ets  TextInputPlugin.ets  TextInputPlugin.ts
shell/platform/ohos/flutter_embedding/flutter/src/main/ets/plugin/localization/: LocalizationPlugin.ets
shell/platform/ohos/flutter_embedding/flutter/src/main/ets/plugin/mouse/: MouseCursorPlugin.ets  MouseCursorPlugin.ts
shell/platform/ohos/flutter_embedding/flutter/src/main/ets/plugin/platform/: AccessibilityEventsDelegate.ets  PlatformOverlayView.ets  PlatformView.ets  PlatformViewFactory.ets  PlatformViewRegistry.ets  PlatformViewRegistryImpl.ets  PlatformViewWrapper.ets  PlatformViewsAccessibilityDelegate.ets  PlatformViewsController.ets  RootDvModelManager.ets
shell/platform/ohos/flutter_embedding/flutter/src/main/ets/util/: ByteBuffer.ets  ByteBuffer.ts  Log.ets  Log.ts  MessageChannelUtils.ts  PathUtils.ets  PathUtils.ts  StringUtils.ets  ToolUtils.ets  TraceSection.ets  TraceSection.ts
shell/platform/ohos/flutter_embedding/flutter/src/main/ets/view/: AccessibilityBridge.ets  FlutterCallbackInformation.ets  FlutterCallbackInformation.ts  FlutterNativeView.ets  FlutterRunArguments.ets  FlutterView.ets  TextureRegistry.ets
shell/platform/ohos/flutter_embedding/flutter/src/main/ets/view/DynamicView/: dynamicView.ets  dynamicViewJson.ets
shell/platform/ohos/flutter_embedding/hvigor/: hvigor-config.json5
shell/platform/ohos/napi/: platform_view_ohos_napi.cpp  platform_view_ohos_napi.h
shell/platform/ohos/surface/: ohos_native_window.cpp  ohos_native_window.h  ohos_snapshot_surface_producer.cpp  ohos_snapshot_surface_producer.h  ohos_surface.cpp  ohos_surface.h
shell/version/: version.gni
(+111 files in other folders)
